--- a/dashboard.html
+++ b/dashboard.html
@@ -9,6 +9,10 @@
   <h1>Welcome to the Dashboard</h1>
   <p>You have successfully logged in!</p>
   
- <iframe width="853" height="480" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="Rick Astley - Never Gonna Give You Up (Official Music Video)" frameborder="0" allow="muted=1;autoplay=1;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"
+ <iframe width="853" height="480" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=1" title="Rick Astley - Never Gonna Give You Up (Official Music Video)" frameborder="0" 
+ allow="autoplay;accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+ referrerpolicy="strict-origin-when-cross-origin" 
+ allowfullscreen>
+</iframe>
 </body>
 </html>
