--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Welcome to the Dashboard</h1>
-  <p>You have successfully logged in!</p>
+  <p>You haveccessfully logged in!</p>
   
   <iframe 
     width="853" 
