--- a/dashboard.html
+++ b/dashboard.html
@@ -4,31 +4,70 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
-</head>
-<body>
-  <h1>Welcome to the Dashboard</h1>
-  <p>You haveccessully logged in!</p>
+  <script type="module">
+    // **導入 Firebase SDK**
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+    import { getFirestore, collection, getDocs, orderBy, query } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
 
-  <script>
-     document.addEventListener("DOMContentLoaded", function () {
+    // **Firebase 設定**
+    const firebaseConfig = {
+      apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
+      authDomain: "project-7644097720177189571.firebaseapp.com",
+      projectId: "project-7644097720177189571",
+      storageBucket: "project-7644097720177189571.appspot.com",
+      messagingSenderId: "846914787197",
+      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
+      measurementId: "G-Z8HE1CD728"
+    };
+
+    // **初始化 Firebase**
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
+
+    document.addEventListener("DOMContentLoaded", async function () {
+      // **取得 localStorage 中的登入資訊**
       const user = JSON.parse(localStorage.getItem("user"));
 
-      if (user) {
+      if (!user) {
+        // **如果未登入，跳轉回 `login.html`**
+        window.location.href = "login.html";
+      } else {
+        // **顯示使用者資訊**
         document.getElementById("user-info").innerHTML = `
           <p><strong>Email:</strong> ${user.email}</p>
           <p><strong>UID:</strong> ${user.uid}</p>
           <button onclick="logout()">Logout</button>
         `;
-      } else {
-        window.location.href = "login.html";
+
+        // **讀取 Firestore 中的登入歷史**
+        const historyRef = collection(db, "loginHistory");
+        const q = query(historyRef, orderBy("timestamp", "desc"));
+        const querySnapshot = await getDocs(q);
+
+        // **顯示登入歷史**
+        let historyHTML = "<h3>登入歷史</h3><ul>";
+        querySnapshot.forEach((doc) => {
+          const data = doc.data();
+          historyHTML += `<li>${data.email} - ${new Date(data.timestamp.seconds * 1000).toLocaleString()}</li>`;
+        });
+        historyHTML += "</ul>";
+
+        document.getElementById("history").innerHTML = historyHTML;
       }
     });
+
+    // **登出功能**
     function logout() {
       localStorage.removeItem("user");
       window.location.href = "login.html";
     }
-  </script>
-  
 
+    window.logout = logout;
+  </script>
+</head>
+<body>
+  <h1>Welcome to the Dashboard</h1>
+  <div id="user-info"></div>
+  <div id="history"></div>
 </body>
 </html>
