--- a/dashboard.html
+++ b/dashboard.html
@@ -4,10 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard</title>
+</head>
+
+<body>
+  <h1>Welcome to the Dashboard</h1>
+  <div id="user-info"></div>
+  <div id="history"></div>
+  <button onclick="logout()">Logout</button>
+
   <script type="module">
-    // **導入 Firebase SDK**
+    // **導入 Firebase**
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-    import { getFirestore, collection, getDocs, orderBy, query } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
+    import { getFirestore, collection, getDocs, addDoc, orderBy, query, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
 
     // **Firebase 設定**
     const firebaseConfig = {
@@ -16,28 +25,30 @@
       projectId: "project-7644097720177189571",
       storageBucket: "project-7644097720177189571.appspot.com",
       messagingSenderId: "846914787197",
-      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
-      measurementId: "G-Z8HE1CD728"
+      appId: "1:846914787197:web:77e4d7650972e84b5e5e14"
     };
 
     // **初始化 Firebase**
     const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
     const db = getFirestore(app);
 
-    document.addEventListener("DOMContentLoaded", async function () {
-      // **取得 localStorage 中的登入資訊**
-      const user = JSON.parse(localStorage.getItem("user"));
-
+    // **監聽登入狀態**
+    onAuthStateChanged(auth, async (user) => {
       if (!user) {
-        // **如果未登入，跳轉回 `login.html`**
-        window.location.href = "login.html";
+        window.location.href = "login.html"; // 未登入時跳回登入頁
       } else {
-        // **顯示使用者資訊**
         document.getElementById("user-info").innerHTML = `
-          <p><strong>Email:</strong> ${user.email}</p>
+          <h2>Welcome, ${user.email}</h2>
           <p><strong>UID:</strong> ${user.uid}</p>
-          <button onclick="logout()">Logout</button>
         `;
+
+        // **記錄登入歷史**
+        await addDoc(collection(db, "loginHistory"), {
+          email: user.email,
+          uid: user.uid,
+          timestamp: serverTimestamp()
+        });
 
         // **讀取 Firestore 中的登入歷史**
         const historyRef = collection(db, "loginHistory");
@@ -58,16 +69,12 @@
 
     // **登出功能**
     function logout() {
-      localStorage.removeItem("user");
-      window.location.href = "login.html";
+      signOut(auth).then(() => {
+        window.location.href = "login.html"; // 跳回登入頁
+      });
     }
 
     window.logout = logout;
   </script>
-</head>
-<body>
-  <h1>Welcome to the Dashboard</h1>
-  <div id="user-info"></div>
-  <div id="history"></div>
 </body>
 </html>
