--- a/dashboard.html
+++ b/dashboard.html
@@ -70,7 +70,7 @@
     // **登出功能**
     function logout() {
       signOut(auth).then(() => {
-        window.location.href = "login.html"; // 跳回登入頁
+        window.location.href = "index.html"; // 跳回登入頁
       });
     }
 
