--- a/dashboard.html
+++ b/dashboard.html
@@ -36,7 +36,7 @@
     // **監聽登入狀態**
     onAuthStateChanged(auth, async (user) => {
       if (!user) {
-        window.location.href = "login.html"; // 未登入時跳回登入頁
+        window.location.href = "index.html"; // 未登入時跳回登入頁
       } else {
         document.getElementById("user-info").innerHTML = `
           <h2>Welcome, ${user.email}</h2>
