--- a/dashboard.html
+++ b/dashboard.html
@@ -13,64 +13,65 @@
   <button onclick="logout()">Logout</button>
 
   <script type="module">
-    // **導入 Firebase**
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
     import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
     import { getFirestore, collection, getDocs, addDoc, orderBy, query, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
 
-    // **Firebase 設定**
     const firebaseConfig = {
       apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
       authDomain: "project-7644097720177189571.firebaseapp.com",
       projectId: "project-7644097720177189571",
       storageBucket: "project-7644097720177189571.appspot.com",
       messagingSenderId: "846914787197",
-      appId: "1:846914787197:web:77e4d7650972e84b5e5e14"
+      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
     };
 
-    // **初始化 Firebase**
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // **監聽登入狀態**
+    // 監聽登入狀態
     onAuthStateChanged(auth, async (user) => {
       if (!user) {
-        window.location.href = "index.html"; // 未登入時跳回登入頁
+        window.location.href = "index.html";  // 未登入時跳回登入頁
       } else {
         document.getElementById("user-info").innerHTML = `
           <h2>Welcome, ${user.email}</h2>
           <p><strong>UID:</strong> ${user.uid}</p>
         `;
 
-        // **記錄登入歷史**
-        await addDoc(collection(db, "loginHistory"), {
-          email: user.email,
-          uid: user.uid,
-          timestamp: serverTimestamp()
-        });
+        // 記錄登入歷史
+        try {
+          await addDoc(collection(db, "loginHistory"), {
+            email: user.email,
+            uid: user.uid,
+            timestamp: serverTimestamp()
+          });
+          console.log("Login history added successfully!");
+        } catch (error) {
+          console.error("Error adding document: ", error);
+        }
 
-        // **讀取 Firestore 中的登入歷史**
+        // 讀取登入歷史資料
         const historyRef = collection(db, "loginHistory");
         const q = query(historyRef, orderBy("timestamp", "desc"));
         const querySnapshot = await getDocs(q);
 
-        // **顯示登入歷史**
-        let historyHTML = "<h3>登入歷史</h3><ul>";
+        let historyHTML = "<h3>Login History</h3><ul>";
         querySnapshot.forEach((doc) => {
           const data = doc.data();
-          historyHTML += `<li>${data.email} - ${new Date(data.timestamp.seconds * 1000).toLocaleString()}</li>`;
+          const timestamp = data.timestamp ? new Date(data.timestamp.seconds * 1000).toLocaleString() : "No timestamp";
+          historyHTML += `<li>${data.email} - ${timestamp}</li>`;
         });
         historyHTML += "</ul>";
-
         document.getElementById("history").innerHTML = historyHTML;
       }
     });
 
-    // **登出功能**
+    // 登出功能
     function logout() {
       signOut(auth).then(() => {
-        window.location.href = "index.html"; // 跳回登入頁
+        window.location.href = "index.html";  // 登出後跳回登入頁
       });
     }
 
