--- a/dashboard.html
+++ b/dashboard.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <h1>Welcome to the Dashboard</h1>
+  <h1>Welcome o the Dashboard</h1>
   <div id="user-info"></div>
   <div id="history"></div>
   <button onclick="logout()">Logout</button>
