--- a/index.html
+++ b/index.html
@@ -5,9 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Firebase Authentication Example</title>
 </head>
+
 <body>
   <h1>Firebase Authentication Demo</h1>
   
+  <!-- 顯示鏡頭 -->
+  <video id="camera" autoplay playsinline style="width: 100%; max-width: 500px; border: 1px solid #ccc;"></video>
+  
+  <!-- 顯示錯誤訊息 -->
+  <div id="error" style="color: red; margin-top: 10px;"></div>
+
+  <script>
+    // 啟用攝影機
+    async function startCamera() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        document.getElementById("camera").srcObject = stream;
+      } catch (err) {
+        document.getElementById("error").textContent = "Unable to access the camera: " + err.message;
+      }
+    }
+    startCamera();
+  </script>
+
+  <!-- 註冊表單 -->
+  <h2>Register</h2>
+  <form id="registerForm">
+    <input type="email" id="registerEmail" placeholder="Email" required />
+    <input type="password" id="registerPassword" placeholder="Password" required />
+    <button type="submit">Register</button>
+  </form>
+
   <!-- 登入表單 -->
   <h2>Login</h2>
   <form id="loginForm">
@@ -16,30 +44,51 @@
     <button type="submit">Login</button>
   </form>
 
-  <!-- Firebase Initialization and Authentication -->
-  <script type="module">
-    // Import Firebase SDK
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
-    import { getFirestore, collection, addDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-firestore.js";
+  <!-- 忘記密碼表單 -->
+  <h2>Forgot Password</h2>
+  <form id="resetPasswordForm">
+    <input type="email" id="resetEmail" placeholder="Email" required />
+    <button type="submit">Reset Password</button>
+  </form>
 
-    // Firebase Configuration
+  <!-- Firebase 設定與認證 -->
+  <script type="module">
+    // Firebase SDK 引入
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
+
+    // Firebase 設定
     const firebaseConfig = {
-      apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
-      authDomain: "project-7644097720177189571.firebaseapp.com",
-      projectId: "project-7644097720177189571",
-      storageBucket: "project-7644097720177189571.appspot.com",
-      messagingSenderId: "846914787197",
-      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
-      measurementId: "G-Z8HE1CD728"
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID",
+      measurementId: "YOUR_MEASUREMENT_ID"
     };
 
-    // Initialize Firebase
+    // 初始化 Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
-    const db = getFirestore(app);
 
-    // Login User
+    // 註冊使用者
+    document.getElementById("registerForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("registerEmail").value;
+      const password = document.getElementById("registerPassword").value;
+
+      try {
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        alert("Registration successful!");
+        console.log("User Registered:", userCredential.user);
+      } catch (error) {
+        alert("Registration failed: " + error.message);
+        console.error(error);
+      }
+    });
+
+    // 登入使用者
     document.getElementById("loginForm").addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("loginEmail").value;
@@ -48,20 +97,24 @@
       try {
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
         alert("Login successful!");
-
-        // Record login to Firestore
-        const historyRef = collection(db, "loginHistory");
-        await addDoc(historyRef, {
-          email: email,
-          uid: userCredential.user.uid,
-          timestamp: serverTimestamp(),
-        });
-
-        // Redirect to Dashboard
-        window.location.href = "dashboard.html"; 
+        window.location.href = "dashboard.html"; // 成功後轉到 Dashboard
         console.log("User Logged In:", userCredential.user);
       } catch (error) {
         alert("Login failed: " + error.message);
+        console.error(error);
+      }
+    });
+
+    // 忘記密碼處理
+    document.getElementById("resetPasswordForm").addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const email = document.getElementById("resetEmail").value;
+
+      try {
+        await sendPasswordResetEmail(auth, email);
+        alert("Password reset email sent!");
+      } catch (error) {
+        alert("Failed to send password reset email: " + error.message);
         console.error(error);
       }
     });
