--- a/index.html
+++ b/index.html
@@ -53,24 +53,27 @@
 
   <!-- Firebase 設定與認證 -->
   <script type="module">
-    // Firebase SDK 引入
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
+  // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
-    // Firebase 設定
-    const firebaseConfig = {
-      apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
-      authDomain: "project-7644097720177189571.firebaseapp.com",
-      projectId: "project-7644097720177189571",
-      storageBucket: "project-7644097720177189571.appspot.com",
-      messagingSenderId: "846914787197",
-      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
-      measurementId: "G-Z8HE1CD728"
-    };
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
+  authDomain: "project-7644097720177189571.firebaseapp.com",
+  projectId: "project-7644097720177189571",
+  storageBucket: "project-7644097720177189571.firebasestorage.app",
+  messagingSenderId: "846914787197",
+  appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
+  measurementId: "G-Z8HE1CD728"
+};
 
-    // 初始化 Firebase
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 
     // 註冊使用者
     document.getElementById("registerForm").addEventListener("submit", async (e) => {
