--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
     // Firebase Configuration
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID",
+      apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
+      authDomain: "project-7644097720177189571.firebaseapp.com",
+      projectId: "project-7644097720177189571",
+      storageBucket: "project-7644097720177189571.appspot.com",
+      messagingSenderId: "846914787197",
+      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
     };
 
     // Initialize Firebase
