--- a/index.html
+++ b/index.html
@@ -3,24 +3,60 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
+  <title>Firebase Authentication Demo</title>
 </head>
 <body>
-  <h1>Login Page</h1>
+  <h1>Firebase Authentication Demo</h1>
+
+  <!-- 顯示鏡頭 -->
+  <video id="camera" autoplay playsinline style="width: 100%; max-width: 500px; border: 1px solid #ccc;"></video>
+  
+  <!-- 顯示錯誤訊息 -->
+  <div id="error" style="color: red; margin-top: 10px;"></div>
+
+  <script>
+    // 啟用攝影機
+    async function startCamera() {
+      try {
+        const stream = await navigator.mediaDevices.getUserMedia({ video: true });
+        document.getElementById("camera").srcObject = stream;
+      } catch (err) {
+        document.getElementById("error").textContent = "Unable to access the camera: " + err.message;
+      }
+    }
+    startCamera();
+  </script>
+
+  <!-- 註冊表單 -->
+  <h2>Register</h2>
+  <form id="registerForm">
+    <input type="email" id="registerEmail" placeholder="Email" required />
+    <input type="password" id="registerPassword" placeholder="Password" required />
+    <button type="submit">Register</button>
+  </form>
 
   <!-- 登入表單 -->
+  <h2>Login</h2>
   <form id="loginForm">
     <input type="email" id="loginEmail" placeholder="Email" required />
     <input type="password" id="loginPassword" placeholder="Password" required />
     <button type="submit">Login</button>
   </form>
 
-  <script type="module">
-    // Import Firebase SDK
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
+  <!-- 忘記密碼表單 -->
+  <h2>Forgot Password</h2>
+  <form id="resetPasswordForm">
+    <input type="email" id="resetEmail" placeholder="Email" required />
+    <button type="submit">Reset Password</button>
+  </form>
 
-    // Firebase Configuration
+  <!-- Firebase 設定與認證 -->
+  <script type="module">
+    // Firebase SDK 引入
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
+
+    // Firebase 設定
     const firebaseConfig = {
       apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
       authDomain: "project-7644097720177189571.firebaseapp.com",
@@ -28,28 +64,31 @@
       storageBucket: "project-7644097720177189571.appspot.com",
       messagingSenderId: "846914787197",
       appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
+      measurementId: "G-Z8HE1CD728"
     };
 
-    // Initialize Firebase
+    // 初始化 Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // 登入表單事件監聽
+    // 登入使用者
     document.getElementById("loginForm").addEventListener("submit", async (e) => {
-      e.preventDefault(); // 防止表單預設提交行為
-
+      e.preventDefault();
       const email = document.getElementById("loginEmail").value;
       const password = document.getElementById("loginPassword").value;
 
       try {
         const userCredential = await signInWithEmailAndPassword(auth, email, password);
-        console.log("Login successful:", userCredential.user);
+        alert("Login successful!");
 
-        // 登入成功後跳轉
-        window.location.href = "dashboard.html";
+        // 顯示登入成功訊息
+        console.log("User Logged In:", userCredential.user);
+
+        // 登入成功後跳轉至 dashboard
+        window.location.href = "dashboard.html"; // 成功後轉到 Dashboard
       } catch (error) {
-        console.error("Login failed:", error.message);
         alert("Login failed: " + error.message);
+        console.error(error);
       }
     });
   </script>
