--- a/dashboard.html
+++ b/dashboard.html
@@ -30,14 +30,18 @@
       storageBucket: "project-7644097720177189571.appspot.com",
       messagingSenderId: "846914787197",
       appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
-    
+      measurementId: "G-Z8HE1CD728"
     };
 
     // Initialize Firebase
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
     const db = getFirestore(app);
-
+ function logout() {
+      signOut(auth).then(() => {
+        window.location.href = "index.html";  // 登出後跳回登入頁
+      });
+    }
     // Fetch login history from Firestore
     async function fetchLoginHistory() {
       const historyRef = collection(db, "loginHistory");
@@ -61,11 +65,7 @@
     // Display login history
     fetchLoginHistory();
 
-    function logout() {
-      signOut(auth).then(() => {
-        window.location.href = "index.html";  // 登出後跳回登入頁
-      });
-    }
+   
 
     window.logout = logout;
   </script>
