--- a/dashboard.html
+++ b/dashboard.html
@@ -14,12 +14,12 @@
     import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
 
     const firebaseConfig = { 
-      apiKey: "YOUR_API_KEY", 
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com", 
-      projectId: "YOUR_PROJECT_ID", 
-      storageBucket: "YOUR_PROJECT_ID.appspot.com", 
-      messagingSenderId: "YOUR_SENDER_ID", 
-      appId: "YOUR_APP_ID" 
+      apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
+      authDomain: "project-7644097720177189571.firebaseapp.com",
+      projectId: "project-7644097720177189571",
+      storageBucket: "project-7644097720177189571.appspot.com",
+      messagingSenderId: "846914787197",
+      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
     };
 
     const app = initializeApp(firebaseConfig);
