--- a/dashboard.html
+++ b/dashboard.html
@@ -13,20 +13,20 @@
     import { initializeApp } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-app.js";
     import { getAuth, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.2.0/firebase-auth.js";
 
-    const firebaseConfig = { 
+    const firebaseConfig = {
       apiKey: "AIzaSyDHKXK6B4MfuU5Lkr53iZXd_NAHQFicwYU",
-      authDomain: "project-7644097720177189571.firebaseapp.com",
-      projectId: "project-7644097720177189571",
-      storageBucket: "project-7644097720177189571.appspot.com",
-      messagingSenderId: "846914787197",
-      appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
-      measurementId: "G-Z8HE1CD728"
+  authDomain: "project-7644097720177189571.firebaseapp.com",
+  projectId: "project-7644097720177189571",
+  storageBucket: "project-7644097720177189571.firebasestorage.app",
+  messagingSenderId: "846914787197",
+  appId: "1:846914787197:web:77e4d7650972e84b5e5e14",
+  measurementId: "G-Z8HE1CD728"
     };
 
     const app = initializeApp(firebaseConfig);
     const auth = getAuth(app);
 
-    // 🔹 確保使用者已登入，否則跳回登入頁
+    // 🔹 確保使用者已登入，否則跳回 `index.html`
     onAuthStateChanged(auth, (user) => {
       if (!user) {
         window.location.href = "index.html"; 
